--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url('/img/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 
     overflow: hidden;
 }
@@ -25,11 +26,14 @@ body {
 }
 
 .cadre {
-    display: block;
-    margin-left : 37%;
-    margin-right : 37%;
-    margin-bottom : 20%;
-    margin-top : 7%;
+    width: 400px;
+    height: 650px;
+
+    position: absolute;
+    right: 50%;
+    top: 53%;
+    transform: translateY(-50%) translateX(50%);
+
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
@@ -38,9 +42,13 @@ body {
 
 .cadre h1 {
     text-align: center;
-    margin : 5%;
-    margin-top: 5%;
-    margin-bottom: 0;
+    width: 300px;
+
+    position: absolute;
+    top: 32%;
+    right: 50%;
+    transform: translateX(50%);
+
     font-size: 2em;
     font-family: 'Roboto', sans-serif;
     color: white;
@@ -48,20 +56,27 @@ body {
 
 .cadre p {
     text-align: center;
-    margin: 6%;
-    margin-bottom: 30%;
-    padding-bottom: 5%;
+    width: 350px;
+
+    position: absolute;
+    top: 40%;
+    right: 50%;
+    transform: translateX(50%);
+
     font-size: 1.4em;
     color: white;
 }
 
 .cadre img {
     position: relative;
-    width: 60%;
-    height: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    
+    display: block;
+    margin-right: 50%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+
     border-radius: 6px;
     margin-top: -12%;
     box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
