--- a/style.css
+++ b/style.css
@@ -18,11 +18,23 @@ body {
     transform: translateY(-50%) translateX(50%);
 
     text-align: center;
+    font-size: 1.4em;
+    color: white;
 
     box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-    background-color: white;
+    background: linear-gradient(#ef5322, #7b6fb1);
 
     visibility: hidden;
+}
+
+.barre{
+    width: 35%;
+
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 32%;
+
+    border-color: #ffffff;
 }
 
 .cadre {
@@ -59,7 +71,7 @@ body {
     width: 350px;
 
     position: absolute;
-    top: 40%;
+    top: 42%;
     right: 50%;
     transform: translateX(50%);
 
